src/antlrgen/SlangGrammarParser.cpp

// Generated from D:/Documents/Projects/slang/src/grammar/SlangGrammar.g4 by ANTLR 4.9.2


#include "SlangGrammarVisitor.h"

#include "SlangGrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

SlangGrammarParser::SlangGrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SlangGrammarParser::~SlangGrammarParser() {
  delete _interpreter;
}

std::string SlangGrammarParser::getGrammarFileName() const {
  return "SlangGrammar.g4";
}

const std::vector<std::string>& SlangGrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SlangGrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

SlangGrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::ProgramContext::EOF() {
  return getToken(SlangGrammarParser::EOF, 0);
}

tree::TerminalNode* SlangGrammarParser::ProgramContext::PROGSTART() {
  return getToken(SlangGrammarParser::PROGSTART, 0);
}

tree::TerminalNode* SlangGrammarParser::ProgramContext::PROGEND() {
  return getToken(SlangGrammarParser::PROGEND, 0);
}

SlangGrammarParser::StatementsContext* SlangGrammarParser::ProgramContext::statements() {
  return getRuleContext<SlangGrammarParser::StatementsContext>(0);
}


size_t SlangGrammarParser::ProgramContext::getRuleIndex() const {
  return SlangGrammarParser::RuleProgram;
}


antlrcpp::Any SlangGrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::ProgramContext* SlangGrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SlangGrammarParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(44);
      match(SlangGrammarParser::EOF);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(45);
      match(SlangGrammarParser::PROGSTART);
      setState(46);
      match(SlangGrammarParser::PROGEND);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(47);
      match(SlangGrammarParser::PROGSTART);
      setState(48);
      statements();
      setState(49);
      match(SlangGrammarParser::PROGEND);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(51);
      statements();
      setState(52);
      match(SlangGrammarParser::EOF);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

SlangGrammarParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SlangGrammarParser::StatementContext *> SlangGrammarParser::StatementsContext::statement() {
  return getRuleContexts<SlangGrammarParser::StatementContext>();
}

SlangGrammarParser::StatementContext* SlangGrammarParser::StatementsContext::statement(size_t i) {
  return getRuleContext<SlangGrammarParser::StatementContext>(i);
}

std::vector<SlangGrammarParser::CompoundStmtContext *> SlangGrammarParser::StatementsContext::compoundStmt() {
  return getRuleContexts<SlangGrammarParser::CompoundStmtContext>();
}

SlangGrammarParser::CompoundStmtContext* SlangGrammarParser::StatementsContext::compoundStmt(size_t i) {
  return getRuleContext<SlangGrammarParser::CompoundStmtContext>(i);
}

std::vector<SlangGrammarParser::FuncDefContext *> SlangGrammarParser::StatementsContext::funcDef() {
  return getRuleContexts<SlangGrammarParser::FuncDefContext>();
}

SlangGrammarParser::FuncDefContext* SlangGrammarParser::StatementsContext::funcDef(size_t i) {
  return getRuleContext<SlangGrammarParser::FuncDefContext>(i);
}

std::vector<SlangGrammarParser::CommentMultilineContext *> SlangGrammarParser::StatementsContext::commentMultiline() {
  return getRuleContexts<SlangGrammarParser::CommentMultilineContext>();
}

SlangGrammarParser::CommentMultilineContext* SlangGrammarParser::StatementsContext::commentMultiline(size_t i) {
  return getRuleContext<SlangGrammarParser::CommentMultilineContext>(i);
}


size_t SlangGrammarParser::StatementsContext::getRuleIndex() const {
  return SlangGrammarParser::RuleStatements;
}


antlrcpp::Any SlangGrammarParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::StatementsContext* SlangGrammarParser::statements() {
  StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, SlangGrammarParser::RuleStatements);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(60);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case SlangGrammarParser::LPAREN:
        case SlangGrammarParser::VARDEF:
        case SlangGrammarParser::RETURN:
        case SlangGrammarParser::IDENTIFIER: {
          setState(56);
          statement();
          break;
        }

        case SlangGrammarParser::LCURLYBR:
        case SlangGrammarParser::IF:
        case SlangGrammarParser::WHILE: {
          setState(57);
          compoundStmt();
          break;
        }

        case SlangGrammarParser::FUNCDEF: {
          setState(58);
          funcDef();
          break;
        }

        case SlangGrammarParser::MARKERCOMMULTILINESTART: {
          setState(59);
          commentMultiline();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(62); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SlangGrammarParser::LPAREN)
      | (1ULL << SlangGrammarParser::LCURLYBR)
      | (1ULL << SlangGrammarParser::MARKERCOMMULTILINESTART)
      | (1ULL << SlangGrammarParser::IF)
      | (1ULL << SlangGrammarParser::FUNCDEF)
      | (1ULL << SlangGrammarParser::VARDEF)
      | (1ULL << SlangGrammarParser::WHILE)
      | (1ULL << SlangGrammarParser::RETURN)
      | (1ULL << SlangGrammarParser::IDENTIFIER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentMultilineContext ------------------------------------------------------------------

SlangGrammarParser::CommentMultilineContext::CommentMultilineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::CommentMultilineContext::MARKERCOMMULTILINESTART() {
  return getToken(SlangGrammarParser::MARKERCOMMULTILINESTART, 0);
}

tree::TerminalNode* SlangGrammarParser::CommentMultilineContext::MARKERCOMMULTILINEEND() {
  return getToken(SlangGrammarParser::MARKERCOMMULTILINEEND, 0);
}


size_t SlangGrammarParser::CommentMultilineContext::getRuleIndex() const {
  return SlangGrammarParser::RuleCommentMultiline;
}


antlrcpp::Any SlangGrammarParser::CommentMultilineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitCommentMultiline(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::CommentMultilineContext* SlangGrammarParser::commentMultiline() {
  CommentMultilineContext *_localctx = _tracker.createInstance<CommentMultilineContext>(_ctx, getState());
  enterRule(_localctx, 4, SlangGrammarParser::RuleCommentMultiline);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(SlangGrammarParser::MARKERCOMMULTILINESTART);
    setState(68);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1 + 1) {
        setState(65);
        matchWildcard(); 
      }
      setState(70);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(71);
    match(SlangGrammarParser::MARKERCOMMULTILINEEND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SlangGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::StatementContext::STATEMENTEND() {
  return getToken(SlangGrammarParser::STATEMENTEND, 0);
}

SlangGrammarParser::DeclStmtContext* SlangGrammarParser::StatementContext::declStmt() {
  return getRuleContext<SlangGrammarParser::DeclStmtContext>(0);
}

SlangGrammarParser::AssignStmtContext* SlangGrammarParser::StatementContext::assignStmt() {
  return getRuleContext<SlangGrammarParser::AssignStmtContext>(0);
}

SlangGrammarParser::DeclAssignStmtContext* SlangGrammarParser::StatementContext::declAssignStmt() {
  return getRuleContext<SlangGrammarParser::DeclAssignStmtContext>(0);
}

SlangGrammarParser::FunctionCallContext* SlangGrammarParser::StatementContext::functionCall() {
  return getRuleContext<SlangGrammarParser::FunctionCallContext>(0);
}

SlangGrammarParser::ReturnStmtContext* SlangGrammarParser::StatementContext::returnStmt() {
  return getRuleContext<SlangGrammarParser::ReturnStmtContext>(0);
}


size_t SlangGrammarParser::StatementContext::getRuleIndex() const {
  return SlangGrammarParser::RuleStatement;
}


antlrcpp::Any SlangGrammarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::StatementContext* SlangGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, SlangGrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(73);
      declStmt();
      break;
    }

    case 2: {
      setState(74);
      assignStmt();
      break;
    }

    case 3: {
      setState(75);
      declAssignStmt();
      break;
    }

    case 4: {
      setState(76);
      functionCall();
      break;
    }

    case 5: {
      setState(77);
      returnStmt();
      break;
    }

    default:
      break;
    }
    setState(80);
    match(SlangGrammarParser::STATEMENTEND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

SlangGrammarParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::ReturnStmtContext::RETURN() {
  return getToken(SlangGrammarParser::RETURN, 0);
}

SlangGrammarParser::ExprContext* SlangGrammarParser::ReturnStmtContext::expr() {
  return getRuleContext<SlangGrammarParser::ExprContext>(0);
}


size_t SlangGrammarParser::ReturnStmtContext::getRuleIndex() const {
  return SlangGrammarParser::RuleReturnStmt;
}


antlrcpp::Any SlangGrammarParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::ReturnStmtContext* SlangGrammarParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, SlangGrammarParser::RuleReturnStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(82);
      match(SlangGrammarParser::RETURN);
      setState(83);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      match(SlangGrammarParser::RETURN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignStmtContext ------------------------------------------------------------------

SlangGrammarParser::AssignStmtContext::AssignStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::AssignStmtContext::IDENTIFIER() {
  return getToken(SlangGrammarParser::IDENTIFIER, 0);
}

tree::TerminalNode* SlangGrammarParser::AssignStmtContext::EQUAL() {
  return getToken(SlangGrammarParser::EQUAL, 0);
}

SlangGrammarParser::ExprContext* SlangGrammarParser::AssignStmtContext::expr() {
  return getRuleContext<SlangGrammarParser::ExprContext>(0);
}


size_t SlangGrammarParser::AssignStmtContext::getRuleIndex() const {
  return SlangGrammarParser::RuleAssignStmt;
}


antlrcpp::Any SlangGrammarParser::AssignStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitAssignStmt(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::AssignStmtContext* SlangGrammarParser::assignStmt() {
  AssignStmtContext *_localctx = _tracker.createInstance<AssignStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, SlangGrammarParser::RuleAssignStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(SlangGrammarParser::IDENTIFIER);
    setState(88);
    match(SlangGrammarParser::EQUAL);
    setState(89);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

SlangGrammarParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::ExprContext::LPAREN() {
  return getToken(SlangGrammarParser::LPAREN, 0);
}

std::vector<SlangGrammarParser::ExprContext *> SlangGrammarParser::ExprContext::expr() {
  return getRuleContexts<SlangGrammarParser::ExprContext>();
}

SlangGrammarParser::ExprContext* SlangGrammarParser::ExprContext::expr(size_t i) {
  return getRuleContext<SlangGrammarParser::ExprContext>(i);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::RPAREN() {
  return getToken(SlangGrammarParser::RPAREN, 0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::MINUS() {
  return getToken(SlangGrammarParser::MINUS, 0);
}

SlangGrammarParser::BooleanExprContext* SlangGrammarParser::ExprContext::booleanExpr() {
  return getRuleContext<SlangGrammarParser::BooleanExprContext>(0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::IDENTIFIER() {
  return getToken(SlangGrammarParser::IDENTIFIER, 0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::DECINT() {
  return getToken(SlangGrammarParser::DECINT, 0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::STRING() {
  return getToken(SlangGrammarParser::STRING, 0);
}

SlangGrammarParser::FunctionCallContext* SlangGrammarParser::ExprContext::functionCall() {
  return getRuleContext<SlangGrammarParser::FunctionCallContext>(0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::DIVIDE() {
  return getToken(SlangGrammarParser::DIVIDE, 0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::MULT() {
  return getToken(SlangGrammarParser::MULT, 0);
}

tree::TerminalNode* SlangGrammarParser::ExprContext::PLUS() {
  return getToken(SlangGrammarParser::PLUS, 0);
}


size_t SlangGrammarParser::ExprContext::getRuleIndex() const {
  return SlangGrammarParser::RuleExpr;
}


antlrcpp::Any SlangGrammarParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


SlangGrammarParser::ExprContext* SlangGrammarParser::expr() {
   return expr(0);
}

SlangGrammarParser::ExprContext* SlangGrammarParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SlangGrammarParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  SlangGrammarParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, SlangGrammarParser::RuleExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(92);
      match(SlangGrammarParser::LPAREN);
      setState(93);
      expr(0);
      setState(94);
      match(SlangGrammarParser::RPAREN);
      break;
    }

    case 2: {
      setState(96);
      match(SlangGrammarParser::MINUS);
      setState(97);
      expr(6);
      break;
    }

    case 3: {
      setState(98);
      booleanExpr(0);
      break;
    }

    case 4: {
      setState(99);
      match(SlangGrammarParser::IDENTIFIER);
      break;
    }

    case 5: {
      setState(100);
      match(SlangGrammarParser::DECINT);
      break;
    }

    case 6: {
      setState(101);
      match(SlangGrammarParser::STRING);
      break;
    }

    case 7: {
      setState(102);
      functionCall();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(119);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(117);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(105);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(106);
          match(SlangGrammarParser::DIVIDE);
          setState(107);
          expr(12);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(108);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(109);
          match(SlangGrammarParser::MULT);
          setState(110);
          expr(11);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(111);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(112);
          match(SlangGrammarParser::PLUS);
          setState(113);
          expr(10);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(114);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(115);
          match(SlangGrammarParser::MINUS);
          setState(116);
          expr(9);
          break;
        }

        default:
          break;
        } 
      }
      setState(121);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- DeclStmtContext ------------------------------------------------------------------

SlangGrammarParser::DeclStmtContext::DeclStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::DeclStmtContext::VARDEF() {
  return getToken(SlangGrammarParser::VARDEF, 0);
}

tree::TerminalNode* SlangGrammarParser::DeclStmtContext::IDENTIFIER() {
  return getToken(SlangGrammarParser::IDENTIFIER, 0);
}

tree::TerminalNode* SlangGrammarParser::DeclStmtContext::COLON() {
  return getToken(SlangGrammarParser::COLON, 0);
}

SlangGrammarParser::TypeNameContext* SlangGrammarParser::DeclStmtContext::typeName() {
  return getRuleContext<SlangGrammarParser::TypeNameContext>(0);
}


size_t SlangGrammarParser::DeclStmtContext::getRuleIndex() const {
  return SlangGrammarParser::RuleDeclStmt;
}


antlrcpp::Any SlangGrammarParser::DeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitDeclStmt(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::DeclStmtContext* SlangGrammarParser::declStmt() {
  DeclStmtContext *_localctx = _tracker.createInstance<DeclStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, SlangGrammarParser::RuleDeclStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(SlangGrammarParser::VARDEF);
    setState(123);
    match(SlangGrammarParser::IDENTIFIER);
    setState(124);
    match(SlangGrammarParser::COLON);
    setState(125);
    typeName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeNameContext ------------------------------------------------------------------

SlangGrammarParser::TypeNameContext::TypeNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SlangGrammarParser::TypeNameContext::INTTYPE() {
  return getToken(SlangGrammarParser::INTTYPE, 0);
}

tree::TerminalNode* SlangGrammarParser::TypeNameContext::STRINGTYPE() {
  return getToken(SlangGrammarParser::STRINGTYPE, 0);
}

tree::TerminalNode* SlangGrammarParser::TypeNameContext::VOIDTYPE() {
  return getToken(SlangGrammarParser::VOIDTYPE, 0);
}

tree::TerminalNode* SlangGrammarParser::TypeNameContext::BOOLTYPE() {
  return getToken(SlangGrammarParser::BOOLTYPE, 0);
}


size_t SlangGrammarParser::TypeNameContext::getRuleIndex() const {
  return SlangGrammarParser::RuleTypeName;
}


antlrcpp::Any SlangGrammarParser::TypeNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SlangGrammarVisitor*>(visitor))
    return parserVisitor->visitTypeName(this);
  else
    return visitor->visitChildren(this);
}

SlangGrammarParser::TypeNameContext* SlangGrammarParser::typeName() {
  TypeNameContext *_localctx = _tracker.createInstance<TypeNameContext>(_ctx, getState());
  enterRule(_localctx, 16, SlangGrammarParser::RuleTypeName);
  size_t _la = 0;
